--- a/Sass/_cf.scss
+++ b/Sass/_cf.scss
@@ -43,17 +43,24 @@
             grid-area: 3 / 3 / span 1 / span 1;
         }
 
+        .ccWrapper {
+            grid-area: 4 / span 4 / span 1 / span 3;
+            height: max-content;
+            display: grid;
+            text-align: center;
+            place-content: center;
+        }
+
         .currentCondition__status {
             padding: .35rem;
-            margin-top: 2rem;
-            grid-area: 4 / 1 / span 1 / span 3;
+            // grid-area: 4 / 1 / span 1 / span 3; 
             font-weight: bold;
             text-transform: capitalize;
         }
         .feelsLike {
             padding: .35rem;
             font-weight: 400;
-            grid-area: 5 / 1 / span 1 / span 3;
+            // grid-area: 5 / 1 / span 1 / span 3;       
         }
         .humidity {
             @media screen and (max-height: 500px) {
@@ -61,7 +68,7 @@
             };
             padding: .35rem;
             color: $fade-color;
-            grid-area: 6 / 1 / span 1 / span 3;
+            // grid-area: 6 / 1 / span 1 / span 3;
         }
         .wind {
             @media screen and (max-height: 500px) {
@@ -69,7 +76,7 @@
             };
             padding: .35rem;
             color: $fade-color;
-            grid-area: 7 / 1 / span 1 / span 3;
+            // grid-area: 7 / 1 / span 1 / span 3;
         }
     }
 }
