--- a/css/main.css
+++ b/css/main.css
@@ -1,125 +1,298 @@
-*, *::after, *::before { padding: 0; margin: 0; -webkit-box-sizing: border-box; box-sizing: border-box; }
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
-ul { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; list-style: none; }
+ul {
+  display: flex;
+  align-items: center;
+  list-style: none;
+}
 
-button, input { border: none; outline: none; background-color: transparent; }
+button, input {
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
 
-button { cursor: pointer; }
+button {
+  cursor: pointer;
+}
 
-.offscreen { position: absolute; left: -10000px; }
+.offscreen {
+  position: absolute;
+  left: -10000px;
+}
 
-html, body { width: 100vw; height: 100vh; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; font-size: 20px; color: #fefeff; font-family: "Roboto", sans-serif; padding: .5rem; background-color: #6271e9; overflow: hidden; }
+html,
+body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color: #fefeff;
+  font-family: "Roboto", sans-serif;
+  background-color: #6271e9;
+  overflow: hidden;
+}
 
-main { width: 100%; height: 100%; max-width: 400px; border: 2px solid #c0caf8; border-radius: .25rem; padding: .5rem; background-repeat: no-repeat; background-size: cover; background-color: rgba(0, 0, 0, 0.651); background-blend-mode: overlay; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
+main {
+  width: 100%;
+  height: 100%;
+  max-width: 400px;
+  border: 2px solid #c0caf8;
+  border-radius: 0.25rem;
+  padding: 0.4rem;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.651);
+  background-blend-mode: overlay;
+  display: flex;
+  flex-direction: column;
+}
 
-abbr { text-decoration: none; }
+abbr {
+  text-decoration: none;
+}
 
-.none { display: none; }
+.none {
+  display: none;
+}
 
-.searchSection { margin-bottom: 1rem; }
+.searchSection {
+  margin-bottom: 1rem;
+}
+.searchSection .searchBar {
+  width: 100%;
+  padding: 0.25rem 0.45rem;
+  border: 2px solid #c0caf8;
+  border-radius: 500px;
+  display: flex;
+  align-items: center;
+}
+.searchSection .searchBar:focus-within, .searchSection .searchBar:hover {
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+}
+.searchSection .searchBar .searchBar__text {
+  flex-grow: 1;
+  padding-right: 0.5rem;
+  color: #a4b4fd;
+  font-weight: 300;
+}
+.searchSection .searchBar .searchBar__text::placeholder {
+  font-weight: 300;
+}
+.searchSection .searchBar .submit {
+  color: inherit;
+  font-weight: bold;
+}
 
-.searchSection .searchBar { width: 100%; padding: .25rem .45rem; border: 2px solid #c0caf8; border-radius: 500px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.currentForecast {
+  flex-grow: 1;
+}
+.currentForecast .currentLocation {
+  font-size: 1rem;
+  font-weight: 400;
+  text-align: center;
+  color: #a4b4fd;
+  margin-bottom: 0.5rem;
+}
+.currentForecast .currentConditions {
+  display: grid;
+}
+.currentForecast .currentConditions > * {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.currentForecast .currentConditions .currentTemp {
+  grid-area: 1/1/span 3/span 2;
+  position: relative;
+}
+.currentForecast .currentConditions .currentTemp .temp {
+  font-size: 5rem;
+  font-weight: 400;
+}
+.currentForecast .currentConditions .currentTemp .unit {
+  position: absolute;
+  right: 1.25rem;
+  bottom: 0.5rem;
+  color: #a4b4fd;
+  font-size: 1.5rem;
+}
+.currentForecast .currentConditions .currentForecast__icon {
+  font-size: 1.25rem;
+  grid-area: 1/3/span 1/span 1;
+}
+.currentForecast .currentConditions .maxTemp {
+  grid-area: 2/3/span 1/span 1;
+}
+.currentForecast .currentConditions .minTemp {
+  grid-area: 3/3/span 1/span 1;
+}
+.currentForecast .currentConditions .ccWrapper {
+  grid-area: 4/span 4/span 1/span 3;
+  height: max-content;
+  display: grid;
+  text-align: center;
+  place-content: center;
+}
+.currentForecast .currentConditions .currentCondition__status {
+  padding: 0.35rem;
+  font-weight: bold;
+  text-transform: capitalize;
+}
+.currentForecast .currentConditions .feelsLike {
+  padding: 0.35rem;
+  font-weight: 400;
+}
+.currentForecast .currentConditions .humidity {
+  padding: 0.35rem;
+  color: #a4b4fd;
+}
+@media screen and (max-height: 500px) {
+  .currentForecast .currentConditions .humidity {
+    display: none;
+  }
+}
+.currentForecast .currentConditions .wind {
+  padding: 0.35rem;
+  color: #a4b4fd;
+}
+@media screen and (max-height: 500px) {
+  .currentForecast .currentConditions .wind {
+    display: none;
+  }
+}
 
-.searchSection .searchBar:focus-within, .searchSection .searchBar:hover { -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4); box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4); }
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 0.5rem;
+  margin-bottom: 1rem;
+  border-bottom: 2px solid #c0caf8;
+}
+nav button {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  font-size: 1rem;
+  color: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #c0caf8;
+}
+nav button:hover, nav button:focus {
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+}
 
-.searchSection .searchBar .searchBar__text { -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; padding-right: .5rem; color: #a4b4fd; font-weight: 300; }
+.sixDaysForecast__list {
+  justify-content: space-between;
+}
+.sixDaysForecast__list li {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.sixDaysForecast__list li i {
+  padding: 5px;
+}
 
-.searchSection .searchBar .searchBar__text::-webkit-input-placeholder { font-weight: 300; }
+.fade-in {
+  visibility: visible;
+  opacity: 1;
+  animation: fade-in 1.5s ease-in;
+  animation-iteration-count: 1;
+}
 
-.searchSection .searchBar .searchBar__text:-ms-input-placeholder { font-weight: 300; }
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.zero-vis {
+  visibility: hidden;
+  opacity: 0;
+}
 
-.searchSection .searchBar .searchBar__text::-ms-input-placeholder { font-weight: 300; }
+.d-clear-sky {
+  background-image: url("https://images.unsplash.com/photo-1519940616396-2bb690a63a0b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+}
 
-.searchSection .searchBar .searchBar__text::placeholder { font-weight: 300; }
+.d-few-clouds {
+  background-image: url("https://images.unsplash.com/photo-1600271772584-bf00c886ba29?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+}
 
-.searchSection .searchBar .submit { color: inherit; font-weight: bold; }
+.d-scattered-clouds {
+  background-image: url("https://images.unsplash.com/photo-1601992664212-8f591f72733b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+}
 
-.currentForecast { -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; }
+.d-broken-clouds {
+  background-image: url("https://images.unsplash.com/photo-1456042294454-f9c763e5fb88?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=415&q=80");
+}
 
-.currentForecast .currentLocation { font-size: 1rem; font-weight: 400; text-align: center; color: #a4b4fd; margin-bottom: .5rem; }
+.d-shower-rain {
+  background-image: url("https://images.unsplash.com/photo-1534274988757-a28bf1a57c17?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80");
+}
 
-.currentForecast .currentConditions { display: -ms-grid; display: grid; }
+.d-rain {
+  background-image: url("https://images.unsplash.com/photo-1620385019253-b051a26048ce?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+}
 
-.currentForecast .currentConditions > * { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
+.d-thunderstorm {
+  background-image: url("https://images.unsplash.com/photo-1429552077091-836152271555?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=385&q=80");
+}
 
-.currentForecast .currentConditions .currentTemp { -ms-grid-row: 1; -ms-grid-row-span: 3; -ms-grid-column: 1; -ms-grid-column-span: 2; grid-area: 1 / 1 / span 3 / span 2; position: relative; }
+.d-snow {
+  background-image: url("https://images.unsplash.com/photo-1431036101494-66a36de47def?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=386&q=80");
+}
 
-.currentForecast .currentConditions .currentTemp .temp { font-size: 5rem; font-weight: 400; }
+.d-mist {
+  background-image: url("https://images.unsplash.com/photo-1485236715568-ddc5ee6ca227?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+}
 
-.currentForecast .currentConditions .currentTemp .unit { position: absolute; right: 1.25rem; bottom: .5rem; color: #a4b4fd; font-size: 1.5rem; }
+.n-clear-sky {
+  background-image: url("https://images.unsplash.com/photo-1435224654926-ecc9f7fa028c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+}
 
-.currentForecast .currentConditions .currentForecast__icon { font-size: 1.25rem; -ms-grid-row: 1; -ms-grid-row-span: 1; -ms-grid-column: 3; -ms-grid-column-span: 1; grid-area: 1 / 3 / span 1 / span 1; }
+.n-few-clouds {
+  background-image: url("https://images.unsplash.com/photo-1568420162086-b16456b8d557?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+}
 
-.currentForecast .currentConditions .maxTemp { -ms-grid-row: 2; -ms-grid-row-span: 1; -ms-grid-column: 3; -ms-grid-column-span: 1; grid-area: 2 / 3 / span 1 / span 1; }
+.n-scattered-clouds {
+  background-image: url("https://images.unsplash.com/photo-1552572455-1e855bd25a18?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+}
 
-.currentForecast .currentConditions .minTemp { -ms-grid-row: 3; -ms-grid-row-span: 1; -ms-grid-column: 3; -ms-grid-column-span: 1; grid-area: 3 / 3 / span 1 / span 1; }
+.n-broken-clouds {
+  background-image: url("https://images.unsplash.com/photo-1582996782008-49e06ddac471?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+}
 
-.currentForecast .currentConditions .currentCondition__status { padding: .35rem; margin-top: 2rem; -ms-grid-row: 4; -ms-grid-row-span: 1; -ms-grid-column: 1; -ms-grid-column-span: 3; grid-area: 4 / 1 / span 1 / span 3; font-weight: bold; text-transform: capitalize; }
+.n-shower-rain {
+  background-image: url("https://images.unsplash.com/photo-1566829834564-1bb7823799ee?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+}
 
-.currentForecast .currentConditions .feelsLike { padding: .35rem; font-weight: 400; -ms-grid-row: 5; -ms-grid-row-span: 1; -ms-grid-column: 1; -ms-grid-column-span: 3; grid-area: 5 / 1 / span 1 / span 3; }
+.n-rain {
+  background-image: url("https://images.unsplash.com/photo-1527900912283-b98ca2b647a8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+}
 
-.currentForecast .currentConditions .humidity { padding: .35rem; color: #a4b4fd; -ms-grid-row: 6; -ms-grid-row-span: 1; -ms-grid-column: 1; -ms-grid-column-span: 3; grid-area: 6 / 1 / span 1 / span 3; }
+.n-thunderstorm {
+  background-image: url("https://images.unsplash.com/photo-1514856841774-b927b221d7c9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+}
 
-@media screen and (max-height: 500px) { .currentForecast .currentConditions .humidity { display: none; } }
+.n-snow {
+  background-image: url("https://images.unsplash.com/photo-1518467946652-b194dd6dd321?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+}
 
-.currentForecast .currentConditions .wind { padding: .35rem; color: #a4b4fd; -ms-grid-row: 7; -ms-grid-row-span: 1; -ms-grid-column: 1; -ms-grid-column-span: 3; grid-area: 7 / 1 / span 1 / span 3; }
-
-@media screen and (max-height: 500px) { .currentForecast .currentConditions .wind { display: none; } }
-
-nav { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; padding-bottom: .5rem; margin-bottom: 1rem; border-bottom: 2px solid #c0caf8; }
-
-nav button { width: 48px; height: 48px; border-radius: 50%; font-size: 1rem; color: inherit; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; border: 1px solid #c0caf8; }
-
-nav button:hover, nav button:focus { -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3); box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3); }
-
-.sixDaysForecast__list { -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
-
-.sixDaysForecast__list li { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
-
-.sixDaysForecast__list li i { padding: 5px; }
-
-.fade-in { visibility: visible; opacity: 1; -webkit-animation: fade-in 1.5s ease-in; animation: fade-in 1.5s ease-in; -webkit-animation-iteration-count: 1; animation-iteration-count: 1; }
-
-@-webkit-keyframes fade-in { from { opacity: 0; }
-  to { opacity: 1; } }
-
-@keyframes fade-in { from { opacity: 0; }
-  to { opacity: 1; } }
-
-.zero-vis { visibility: hidden; opacity: 0; }
-
-.d-clear-sky { background-image: url("https://images.unsplash.com/photo-1519940616396-2bb690a63a0b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"); }
-
-.d-few-clouds { background-image: url("https://images.unsplash.com/photo-1600271772584-bf00c886ba29?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"); }
-
-.d-scattered-clouds { background-image: url("https://images.unsplash.com/photo-1601992664212-8f591f72733b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"); }
-
-.d-broken-clouds { background-image: url("https://images.unsplash.com/photo-1456042294454-f9c763e5fb88?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=415&q=80"); }
-
-.d-shower-rain { background-image: url("https://images.unsplash.com/photo-1534274988757-a28bf1a57c17?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80"); }
-
-.d-rain { background-image: url("https://images.unsplash.com/photo-1620385019253-b051a26048ce?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"); }
-
-.d-thunderstorm { background-image: url("https://images.unsplash.com/photo-1429552077091-836152271555?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=385&q=80"); }
-
-.d-snow { background-image: url("https://images.unsplash.com/photo-1431036101494-66a36de47def?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=386&q=80"); }
-
-.d-mist { background-image: url("https://images.unsplash.com/photo-1485236715568-ddc5ee6ca227?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"); }
-
-.n-clear-sky { background-image: url("https://images.unsplash.com/photo-1435224654926-ecc9f7fa028c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"); }
-
-.n-few-clouds { background-image: url("https://images.unsplash.com/photo-1568420162086-b16456b8d557?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"); }
-
-.n-scattered-clouds { background-image: url("https://images.unsplash.com/photo-1552572455-1e855bd25a18?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"); }
-
-.n-broken-clouds { background-image: url("https://images.unsplash.com/photo-1582996782008-49e06ddac471?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"); }
-
-.n-shower-rain { background-image: url("https://images.unsplash.com/photo-1566829834564-1bb7823799ee?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"); }
-
-.n-rain { background-image: url("https://images.unsplash.com/photo-1527900912283-b98ca2b647a8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"); }
-
-.n-thunderstorm { background-image: url("https://images.unsplash.com/photo-1514856841774-b927b221d7c9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"); }
-
-.n-snow { background-image: url("https://images.unsplash.com/photo-1518467946652-b194dd6dd321?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"); }
-
-.n-mist { background-image: url("https://images.unsplash.com/photo-1515693516428-3c89b92d3220?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"); }
+.n-mist {
+  background-image: url("https://images.unsplash.com/photo-1515693516428-3c89b92d3220?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+}
