--- a/Sass/_basics.scss
+++ b/Sass/_basics.scss
@@ -35,12 +35,12 @@ body {
     color: $font-color;
     font-family: $font-stack;
     background-color: $bg-color;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 main {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     max-width: 400px;
     border: 2px solid $border-color;
     border-radius: .25rem;
