--- a/Sass/_basics.scss
+++ b/Sass/_basics.scss
@@ -35,16 +35,16 @@ body {
     color: $font-color;
     font-family: $font-stack;
     background-color: $bg-color;
-    // overflow: hidden;
+    overflow: hidden;
 }
 
 main {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     max-width: 400px;
     border: 2px solid $border-color;
     border-radius: .25rem;
-    padding: .4rem;
+    padding: .5rem;
     background-repeat: no-repeat;
     background-size: cover;
     background-color: rgba(0, 0, 0, 0.651);
