--- a/Sass/_basics.scss
+++ b/Sass/_basics.scss
@@ -45,6 +45,7 @@ main {
     border: 2px solid $border-color;
     border-radius: .25rem;
     padding: .5rem;
+    padding-right: 2rem;
     background-repeat: no-repeat;
     background-size: cover;
     background-color: rgba(0, 0, 0, 0.651);
