--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,7 @@ main {
   border: 2px solid #c0caf8;
   border-radius: 0.25rem;
   padding: 0.5rem;
+  padding-right: 2rem;
   background-repeat: no-repeat;
   background-size: cover;
   background-color: rgba(0, 0, 0, 0.651);
